<resources>
	<string name="app_name">VivoKeyPass</string>
	<string name="title_activity_no_keepass">NoKeepassActivity</string>
	<string name="no_db_selected">No database selected</string>
	<string name="cancel">Cancel</string>
	<string name="text_continue">Continue</string>
	<string name="password_hint_text">Password</string>
	<string name="no_keyfile_selected">No keyfile selected</string>
	<string name="clear_keyfile">Clear keyfile</string>
	<string name="no_pin_entered">No PIN entered</string>
	<string name="pin_configured">PIN configured</string>
	<string name="configure_your_pin">Configure your PIN</string>
	<string name="pin_intro_blurb">Using a VivoKey-checked PIN provides a balance between password-free access and security.</string>
	<string name="enter_your_current_pin_if_set">Enter your current PIN if one is set</string>
	<string name="current_pin">Current PIN</string>
	<string name="enter_your_new_pin">Enter your new PIN</string>
	<string name="install_keepass2android">Install Keepass2Android</string>
	<string name="install_keepassdroid">Install KeePassDroid</string>
	<string name="we_require_keepass">VivoKeyPass integrates with your existing KeePass app and adds password-free unlocking with your VivoKey.</string>
	<string name="please_install_a_keepass_app">Please install a KeePass app</string>
</resources>
